# gelx

./: .env.example  .envrc  .gitignore  .release-plz.toml  Cargo.toml  changelog.md  codecov.yml  deny.toml  devenv.nix  dprint.json  readme.md  rust-toolchain.toml
crates/gelx/: Cargo.toml  cargo.md  changelog.md  readme.md
crates/gelx/queries/: insert_location.edgeql  select_simple_location.edgeql
crates/gelx/src/: client.rs  geometry.rs  lib.rs
crates/gelx/tests/: codegen.rs  compile.rs  query.rs
crates/gelx/tests/compile/codegen/: aliased_enums__builder_query_serde_strum.rs  case_01_str.rs  case_01_str__builder_query_serde_strum.rs  case_02_bool.rs  case_02_bool__builder_query_serde_strum.rs  case_03_int64.rs  case_03_int64__builder_query_serde_strum.rs  case_04_float64.rs  case_04_float64__builder_query_serde_strum.rs  case_05_bigint.rs  case_05_bigint__builder_query_serde_strum.rs  case_06_decimal.rs  case_06_decimal__builder_query_serde_strum.rs  case_07_uuid.rs  case_07_uuid__builder_query_serde_strum.rs  case_08_datetime.rs  case_08_datetime__builder_query_serde_strum.rs  case_09_duration.rs  case_09_duration__builder_query_serde_strum.rs  case_10_array.rs  case_10_array__builder_query_serde_strum.rs  case_11_tuple.rs  case_11_tuple__builder_query_serde_strum.rs  case_12_named_tuple.rs  case_12_named_tuple__builder_query_serde_strum.rs  case_13_set.rs  case_13_set__builder_query_serde_strum.rs  case_14_empty_set.rs  case_14_empty_set__builder_query_serde_strum.rs  case_15_input_shape.rs  case_15_input_shape__builder_query_serde_strum.rs  case_16_input_shape_with_args.rs  case_16_input_shape_with_args__builder_query_serde_strum.rs  case_17_object_shape.rs  case_17_object_shape__builder_query_serde_strum.rs  case_18_object_shape_with_args.rs  case_18_object_shape_with_args__builder_query_serde_strum.rs  case_19_enums.rs  case_19_enums__builder_query_serde_strum.rs  case_19_types_query.rs  (+11 more)
crates/gelx/tests/compile/macros/: absolute_file.rs  absolute_file.stderr  extra_args.rs  extra_args.stderr  incorrect_args.rs  incorrect_args.stderr  input_tuple.rs  input_tuple.stderr  missing_file.rs  (+7 more)
crates/gelx/tests/snapshots/: codegen__can_generate_aliased_enums@aliased_enums.snap  codegen__can_generate_aliased_enums@aliased_enums__builder.snap  codegen__can_generate_aliased_enums@aliased_enums__builder_query_serde_strum.snap  codegen__can_generate_aliased_enums@aliased_enums__query_serde.snap  codegen__can_generate_enums@enums.snap  codegen__can_generate_enums@enums__builder.snap  codegen__can_generate_enums@enums__builder_query_serde_strum.snap  codegen__can_generate_enums@enums__query_serde.snap  codegen__codegen_files@insert_user.snap  codegen__codegen_files@insert_user__builder.snap  codegen__codegen_files@insert_user__builder_query_serde_strum.snap  codegen__codegen_files@insert_user__query_serde.snap  codegen__codegen_files@remove_user.snap  codegen__codegen_files@remove_user__builder.snap  codegen__codegen_files@remove_user__builder_query_serde_strum.snap  codegen__codegen_files@remove_user__query_serde.snap  codegen__codegen_literals@case_01_str.snap  codegen__codegen_literals@case_01_str__builder_query_serde_strum.snap  codegen__codegen_literals@case_02_bool__builder_query_serde_strum.snap  codegen__codegen_literals@case_02_bool__query_serde.snap  codegen__codegen_literals@case_03_int64.snap  codegen__codegen_literals@case_03_int64__builder_query_serde_strum.snap  codegen__codegen_literals@case_04_float64.snap  codegen__codegen_literals@case_04_float64__builder_query_serde_strum.snap  codegen__codegen_literals@case_05_bigint.snap  codegen__codegen_literals@case_05_bigint__builder_query_serde_strum.snap  codegen__codegen_literals@case_06_decimal.snap  codegen__codegen_literals@case_06_decimal__builder_query_serde_strum.snap  codegen__codegen_literals@case_07_uuid.snap  codegen__codegen_literals@case_07_uuid__builder_query_serde_strum.snap  codegen__codegen_literals@case_08_datetime.snap  codegen__codegen_literals@case_08_datetime__builder_query_serde_strum.snap  codegen__codegen_literals@case_09_duration__builder_query_serde_strum.snap  codegen__codegen_literals@case_10_array.snap  codegen__codegen_literals@case_10_array__builder_query_serde_strum.snap  codegen__codegen_literals@case_11_tuple.snap  codegen__codegen_literals@case_11_tuple__builder_query_serde_strum.snap  codegen__codegen_literals@case_12_named_tuple.snap  codegen__codegen_literals@case_12_named_tuple__builder_query_serde_strum.snap  codegen__codegen_literals@case_12_named_tuple__query_serde.snap  (+36 more)
crates/gelx_build/: Cargo.toml  changelog.md  readme.md
crates/gelx_build/src/: lib.rs
crates/gelx_build/tests/: build.rs
crates/gelx_build/tests/snapshots/: build__build.snap  build__build_sync.snap
crates/gelx_cli/: Cargo.toml  changelog.md  readme.md
crates/gelx_cli/src/: lib.rs  main.rs
crates/gelx_cli/src/snapshots/: gelx__tests__generate.snap  gelx__tests__generate_stdout.snap  gelx_cli__tests__generate_stdout.snap
crates/gelx_cli/tests/: cli.rs
crates/gelx_cli/tests/snapshots/: cli__check.snap  cli__cwd.snap  cli__generate_files.snap  cli__generate_stdout.snap  cli__invalid_cwd.snap  cli__invalid_cwd_check.snap
crates/gelx_core/: Cargo.toml  changelog.md  readme.md
crates/gelx_core/src/: constants.rs  enums.rs  errors.rs  lib.rs  metadata.rs  types.rs  utils.rs
crates/gelx_core/src/codegen/: generate.rs  globals.rs  mod.rs  modules.rs  types.rs
crates/gelx_core/src/snapshots/: gelx_core__types__tests__can_generate_aliased_enums.snap  gelx_core__types__tests__can_generate_enums.snap  gelx_core__utils__tests__can_format_file.snap
crates/gelx_core/src/types/: mod.rs
crates/gelx_macros/: Cargo.toml  changelog.md  readme.md
crates/gelx_macros/src/: lib.rs
examples/gelx_example/: Cargo.toml
examples/gelx_example/queries/: auth_allowed_redirect_urls.edgeql  insert_position.edgeql  insert_user.edgeql  select_accounts.edgeql  select_test_user.edgeql
examples/gelx_example/src/: gelx_generated.rs  lib.rs  main.rs
examples/gelx_example/src/db/: additional.rs  default.rs  mod.rs
(+17 files in other folders)
