[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2024"
homepage = "https://geldata.com"
license = "Unlicense"
repository = "https://github.com/ifiokjr/gelx"
rust-version = "1.85.0"

[workspace.dependencies]
assert2 = "0.3"
bigdecimal = "0.4"
bytes = "1"
cfg-if = "1"
check_keyword = "0.4"
chrono = "0.4"
clap = "4.5.38"
document-features = "0.2"
gel-derive = "0.7"
gel-errors = "0.5"
gel-protocol = "0.8"
gel-tokio = "0.10"
heck = "0.5"
indexmap = "2"
insta = "1"
log = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
rstest = "0.25"
rustversion = "1"
serde = "1"
serde_bytes = "0.11"
syn = "2"
test-log = "0.2"
thiserror = "2"
tokio = "1"
trybuild = "1"
typed-builder = "0.21"
uuid = "1"

# crates
gelx = { path = "./crates/gelx", version = "0.3.0" }
gelx_core = { path = "./crates/gelx_core", version = "0.3.0" }
gelx_macros = { path = "./crates/gelx_macros", version = "0.3.0" }

[workspace.metadata.bin]
cargo-deny = { version = "0.18.2" }
cargo-insta = { version = "1.43.1" }
cargo-llvm-cov = { version = "0.6.16" }
cargo-nextest = { version = "0.9.96" }

[workspace.lints.rust]
# Group lints
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# Individual lints
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.clippy]
# Group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
