[workspace]
members = ["crates/*", "examples/gelx_example"]
resolver = "2"

[workspace.package]
version = "0.8.3"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2024"
homepage = "https://geldata.com"
license = "Unlicense"
repository = "https://github.com/ifiokjr/gelx"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
assert2 = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
base64 = { version = "0.22", default-features = false }
bigdecimal = { version = "0.4", default-features = false }
bitflags = { version = "2", default-features = false }
bytes = { version = "1", default-features = false }
cfg-if = { version = "1", default-features = false }
check_keyword = { version = "0.4", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4", default-features = false }
derive_more = { version = "2", default-features = false }
document-features = { version = "0.2", default-features = false }
futures = { version = "0.3", default-features = false }
gel-derive = { version = "0.7.3", default-features = false }
gel-errors = { version = "0.5", default-features = false }
gel-protocol = { version = "0.8", default-features = false }
gel-tokio = { version = "0.10.16", default-features = false }
geo = { version = "0.30", default-features = false }
geo-traits = { version = "0.3", default-features = false }
geo-types = { version = "0.7", default-features = false }
heck = { version = "0.5", default-features = false }
indexmap = { version = "2", default-features = false }
insta = { version = "1", default-features = false }
insta-cmd = { version = "0.6", default-features = false }
log = { version = "0.4", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
prettyplease = { version = "0.2", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
regex = { version = "1", default-features = false }
rstest = { version = "0.25", default-features = false }
rustversion = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
serde_bytes = { version = "0.11", default-features = false }
serde_json = { version = "1", default-features = false }
serde_with = { version = "3", default-features = false }
similar = { version = "2", default-features = false }
strum = { version = "0.27", default-features = false }
syn = { version = "2", default-features = false }
test-log = { version = "0.2", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false }
toml = { version = "0.8", default-features = false }
toml_edit = { version = "0.22", default-features = false }
trybuild = { version = "1", default-features = false }
typed-builder = { version = "0.21", default-features = false }
uuid = { version = "1", default-features = false }
wkb = { version = "0.9", default-features = false }

# crates
gelx = { path = "./crates/gelx", version = "0.8.3" }
gelx_build = { path = "./crates/gelx_build", version = "0.8.3" }
gelx_cli = { path = "./crates/gelx_cli", version = "0.8.3" }
gelx_core = { path = "./crates/gelx_core", version = "0.8.3" }
gelx_macros = { path = "./crates/gelx_macros", version = "0.8.3" }

[workspace.metadata.bin]
cargo-all-features = { version = "1.10.0", bins = ["cargo-build-all-features", "cargo-check-all-features", "cargo-test-all-features"] }
cargo-deny = { version = "0.18.3" }
cargo-insta = { version = "1.43.1" }
cargo-llvm-cov = { version = "0.6.16" }
cargo-nextest = { version = "0.9.99" }

[workspace.lints.rust]
# Group lints
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# Individual lints
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.clippy]
# Group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
large_futures = "allow"
