[package]
name = "gelx_build"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
base64 = { workspace = true }
gelx_core = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }

[dev-dependencies]
insta = { workspace = true }
insta-cmd = { workspace = true }
tokio = { workspace = true, features = ["time", "test-util", "fs"] }

[lints]
workspace = true

[package.metadata.gelx]
queries_path = "./queries"
features = { query = "ssr", strum = "ssr", builder = "ssr" }
