[package]
name = "gelx_build"
version = { workspace = true }
authors = { workspace = true }
categories = ["database"]
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["gel", "database", "typesafe", "checked", "macros"]
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Enable reading from the configuration in the `Cargo.toml` file while using the `gelx` macros"

[dependencies]
base64 = { workspace = true, default-features = true }
gelx_core = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true, features = ["macros", "rt-multi-thread", "process"] }

[dev-dependencies]
insta = { workspace = true, default-features = true }
insta-cmd = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true, features = ["time", "test-util", "fs"] }

[lints]
workspace = true

[package.metadata.gelx]
queries_path = "./queries"
features = { query = "ssr", strum = "ssr", builder = "ssr" }
