[package]
name = "gelx_cli"
version = { workspace = true }
authors = { workspace = true }
categories = ["database", "command-line-interface"]
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["gel", "database", "typesafe", "codegen", "edgedb"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Generate fully typed rust code from your gel schema and inline queries."

[[bin]]
name = "gelx"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
gelx_core = { workspace = true }
similar = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

[lints]
workspace = true
