[package]
name = "gelx_cli"
version = { workspace = true }
authors = { workspace = true }
categories = ["database", "command-line-interface"]
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["gel", "database", "typesafe", "codegen", "edgedb"]
license = { workspace = true }
publish = true
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Generate fully typed rust code from your gel schema and inline queries."

[[bin]]
name = "gelx"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
gelx_core = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
insta-cmd = { workspace = true }

[lints]
workspace = true
