[package]
name = "gelx_cli"
version = { workspace = true }
authors = { workspace = true }
categories = ["database", "command-line-interface"]
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["gel", "database", "typesafe", "codegen", "edgedb"]
license = { workspace = true }
publish = true
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Generate fully typed rust code from your gel schema and inline queries."

[[bin]]
name = "gelx"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, default-features = true, features = ["derive"] }
futures = { workspace = true, default-features = true }
gelx_core = { workspace = true, default-features = true }
heck = { workspace = true, default-features = true }
proc-macro2 = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
similar = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true, features = ["full"] }
toml = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, default-features = true }
insta-cmd = { workspace = true, default-features = true }

[lints]
workspace = true

[profile.release]
strip = "symbols"
