[package]
name = "gelx_core"
version = { workspace = true }
authors = { workspace = true }
categories = ["database"]
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["gel", "database", "typesafe", "checked", "macros"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Utilities for codegen in the `gelx` crate."

[dependencies]
base64 = { workspace = true, default-features = true }
bitflags = { workspace = true, default-features = true }
check_keyword = { workspace = true, default-features = true }
derive_more = { workspace = true, default-features = true, features = ["from", "into", "into_iterator", "deref", "deref_mut"] }
futures = { workspace = true, default-features = true }
gel-derive = { workspace = true, default-features = true }
gel-errors = { workspace = true, default-features = true }
gel-protocol = { workspace = true, default-features = true, features = ["all-types", "with-serde"] }
gel-tokio = { workspace = true, default-features = true, features = ["unstable", "derive"] }
heck = { workspace = true, default-features = true }
indexmap = { workspace = true, default-features = true, features = ["serde"] }
log = { workspace = true, default-features = true }
prettyplease = { workspace = true, default-features = true }
proc-macro2 = { workspace = true, default-features = true }
quote = { workspace = true, default-features = true }
regex = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }
serde_with = { workspace = true, default-features = true }
strum = { workspace = true, default-features = true, features = ["derive"] }
syn = { workspace = true, default-features = true, features = ["extra-traits"] }
thiserror = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true, features = ["macros", "rt-multi-thread", "process"] }
toml = { workspace = true, default-features = true }
toml_edit = { workspace = true, default-features = true }
typed-builder = { workspace = true, default-features = true }
uuid = { workspace = true, default-features = true, features = ["serde"] }

[dev-dependencies]
assert2 = { workspace = true, default-features = true }
insta = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true, features = ["time", "test-util"] }

[features]
query = []
serde = []
builder = []
strum = []

[lints]
workspace = true
