[package]
name = "gelx_macros"
version = { workspace = true }
authors = { workspace = true }
categories = ["database"]
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["gel", "database", "typesafe", "checked", "macros"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "The proc-macro crate for the `gelx` crate."

[lib]
proc-macro = true

[dependencies]
gelx_core = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[features]
with_bigint = ["gelx_core/with_bigint"]
with_bigdecimal = ["gelx_core/with_bigdecimal"]
with_chrono = ["gelx_core/with_chrono"]
with_all = ["gelx_core/with_all"]
query = ["gelx_core/query"]
serde = ["gelx_core/serde"]
builder = ["gelx_core/builder"]

[lints]
workspace = true
