[package]
name = "gelx_macros"
version = { workspace = true }
authors = { workspace = true }
categories = ["database"]
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["gel", "database", "typesafe", "checked", "macros"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "The proc-macro crate for the `gelx` crate."

[lib]
proc-macro = true

[dependencies]
gelx_core = { workspace = true, default-features = true }
proc-macro2 = { workspace = true, default-features = true }
quote = { workspace = true, default-features = true }
syn = { workspace = true, default-features = true }

[features]
query = ["gelx_core/query"]
serde = ["gelx_core/serde"]
builder = ["gelx_core/builder"]
strum = ["gelx_core/strum"]

[lints]
workspace = true
