[package]
name = "gelx_example"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = "1"
gel-protocol = { workspace = true }
gelx = { workspace = true, features = ["with_all", "serde", "strum", "query", "builder"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true

[features]
default = ["ssr"]
ssr = ["gelx/query", "gelx/serde", "gelx/strum", "gelx/builder"]

[package.metadata.gelx]
queries_path = "./queries"
features = { query = "ssr", strum = "ssr", builder = "ssr" }
output_file = "./src/gelx_generated.rs"
input_struct_name = "Input"
output_struct_name = "Output"
query_function_name = "query"
transaction_function_name = "transaction"
# gel_config_path = "./gel.toml"
# gel_instance = "$GEL_INSTANCE"
# gel_branch = "$GEL_BRANCH"
