[package]
name = "gelx_example"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true, default-features = true }
gel-protocol = { workspace = true, default-features = true }
gelx = { workspace = true, features = ["strum", "builder"] }
serde = { workspace = true, default-features = true, features = ["derive"] }
strum = { workspace = true, default-features = true, features = ["derive"] }
tokio = { workspace = true, default-features = true, features = ["full"] }

[lints]
workspace = true

[features]
default = ["ssr"]
ssr = ["with_query", "with_serde"]
with_all = ["gelx/with_all"]
with_serde = ["gelx/serde"]
with_query = ["gelx/query"]

[package.metadata.gelx]
queries_path = "./queries"
features = { query = "with_query", serde = "with_serde" }
output_path = "./src/db"
input_struct_name = "Input"
output_struct_name = "Output"
query_function_name = "query"
transaction_function_name = "transaction"

[package.metadata.cargo-all-features]
allowlist = ["ssr", "with_all", "with_query", "with_serde"]
